Pagination added to Logbook

--- a/modules/logbook/client/views/view-logbook.client.view.html
+++ b/modules/logbook/client/views/view-logbook.client.view.html
@@ -219,10 +219,10 @@
       </div>
       <br>
       <div class="pull-center" ng-show="authentication.user._id == logbook.user._id">
-        <a class="btn btn-primary" ui-sref="logbook.edit({logbookId: logbook._id})">
+        <a class="btn btn-warning" ui-sref="logbook.edit({logbookId: logbook._id})">
           <i class="glyphicon glyphicon-edit"></i>
         </a>
-        <a class="btn btn-primary" ng-click="remove();">
+        <a class="btn btn-danger" ng-click="remove();">
           <i class="glyphicon glyphicon-trash"></i>
         </a>
       </div>
