--- a/modules/logbook/client/views/list-logbook.client.view.html
+++ b/modules/logbook/client/views/list-logbook.client.view.html
@@ -1,9 +1,21 @@
-<section ng-controller="LogbookController" ng-init="find()">
+<section ng-controller="LogbookListController" >
   <div class="page-header">
-    <h1>Logbook ✈</h1>
+    <div class="row">
+      <div class="col-md-4">
+        <h1>Logbook</h1>
+      </div>
+      <div class="col-md-4" style="margin-top: 2em">
+        <input class="form-control col-md-4" type="text" ng-model="search" placeholder="Search" ng-change="figureOutItemsToDisplay()" />
+      </div>
+      <div class="col-md-2">
+      </div>
+      <div class="col-md-2" style="margin-top: 2em">
+        <button class="btn btn-primary" ui-sref="logbook.create">Log a Flight ✈</button>
+      </div>
+    </div>
   </div>
   <div class="list-group">
-    <a ng-repeat="logbook in logbook" ui-sref="logbook.view({logbookId: logbook._id})" class="list-group-item">
+    <a ng-repeat="logbook in pagedItems" ui-sref="logbook.view({logbookId: logbook._id})" class="list-group-item">
       <h4>
       <span class="list-group-item-text">
         <span ng-bind="logbook.date | date:'MM/dd/yy'"></span>
@@ -22,7 +34,6 @@
       </h4>
     </a>
   </div>
-  <div>
-    <button class="btn btn-primary" ui-sref="logbook.create">Log a Flight ✈</button>
-  </div>
+
+  <pagination boundary-links="true" max-size="8" items-per-page="itemsPerPage" total-items="filterLength" ng-model="currentPage" ng-change="pageChanged()"></pagination>
 </section>
