--- a/modules/fltplan/client/views/fltplan.client.view.html
+++ b/modules/fltplan/client/views/fltplan.client.view.html
@@ -1,3 +1,177 @@
 <section class="container" ng-controller="fltplansController">
-<h1>Flight Plan Page</h1>
+  <div class="page-header">
+    <div class="row">
+      <div class="col-md-4">
+        <h1>Flight Plan</h1>
+      </div>
+      <form class="form-horizontal" ng-submit="submit()">
+        <div class="col-md-4" style="margin-top: 2em">
+          <input class="form-control col-md-4" type="text" ng-model="route" ng-change="route=route.toUpperCase();" placeholder="Search airport ID or route" />
+        </div>
+        <div class="col-md-2" style="margin-top: 2em">
+          <button class="btn btn-primary" ng-model="search">
+          <span>Plan Route ✈</span>
+        </button>
+        </div>
+      </form>
+      <div class="col-md-2" style="margin-top: 2em">
+        <button class="btn btn-primary" ui-sref="logbook.create">
+          <span>Save to Favorites ✈</span>
+        </button>
+      </div>
+    </div>
+  </div>
+  <div class="page-body">
+    <div class="jumbotron" id="jumbo">
+      <div class="row">
+        <div class="col-md-6">
+          <h2>Airport</h2>
+          <div class="row">
+<!--
+sample code needs to be erased
+            <div id="bar">
+              <span>X60 WILLISTON MUNI</span>
+            </div>
+            <div class="afd_div_city">
+              <span class="afd_font_city">WILLISTON, FL</span>
+            </div>
+            <div class="afd">
+              <div class="afd_div_0">
+                <span class="afd_font_2">WILLISTON MUNI</span> <span class="afd_tab_1"></span>
+                <span class="afd_font_0">(X60) <span class="afd_tab_1"></span>2 SW <span class="afd_tab_1"></span>UTC–5(–4DT) <span class="afd_tab_1"></span>N29°21.33′ W82°28.31′</span>
+              </div>
+              <div class="afd_div_1"><span class="afd_font_0">76 <span class="afd_tab_1"></span>B <span class="afd_tab_1"></span>NOTAM FILE GNV</span>
+              </div>
+              <div class="afd_div_1"><span class="afd_font_3">RWY 05–23:</span> <span class="afd_font_0">H6669X100 (CONC) <span class="afd_tab_1"></span>S–72, D–95, 2D–160 <span class="afd_tab_1"></span>HIRL</span>
+              </div>
+              <div class="afd_div_2"><span class="afd_font_3">RWY 05:</span> <span class="afd_font_0">REIL. PAPI(P2L)—GA 3.0° TCH 73′. Trees.</span></div>
+              <div class="afd_div_2"><span class="afd_font_3">RWY 23:</span> <span class="afd_font_0">REIL. PAPI(P2L)—GA 3.0° TCH 50′. Trees.</span></div>
+              <div class="afd_div_1"><span class="afd_font_3">RWY 14–32:</span> <span class="afd_font_0">H4979X60 (ASPH) <span class="afd_tab_1"></span>S–38 <span class="afd_tab_1"></span>MIRL</span>
+              </div>
+              <div class="afd_div_2"><span class="afd_font_3">RWY 14:</span> <span class="afd_font_0">REIL. PAPI(P2L)—GA 3.0° TCH 42′. Trees.</span></div>
+              <div class="afd_div_2"><span class="afd_font_3">RWY 32:</span> <span class="afd_font_0">REIL. PAPI(P2L)—GA 3.0° TCH 44′. Trees.</span></div>
+              <div class="afd_div_1"><span class="afd_font_3">SERVICE:</span> <span class="afd_tab_1"></span><span class="afd_font_0">S4</span> <span class="afd_tab_1"></span><span class="afd_font_3">FUEL</span> <span class="afd_font_0">100LL, JET A</span> <span class="afd_tab_1"></span><span
+                    class="afd_font_3">LGT</span><span class="afd_font_0">ACTIVATE HIRL Rwy 05–23, MIRL Rwy 14–32, REIL Rwy 05, and Rwy 23, Rwy 14, and Rwy 32 and PAPI Rwy 14 and Rwy 32—CTAF. PAPI Rwy 05 and Rwy 23 opr continuously.</span></div>
+              <div class="afd_div_1"><span class="afd_font_3">AIRPORT REMARKS:</span> <span class="afd_font_0">Attended 1300–2300Z‡. Infld berm blocking vision btn rwy ends. Rwy 14–32 25′ shoulders both sides of rwy entire length.</span></div>
+              <div class="afd_div_1"><span class="afd_font_3">AIRPORT MANAGER:</span> <span class="afd_font_0">(352) 528-3060</span></div>
+              <div class="afd_div_1"><span class="afd_font_3">WEATHER DATA SOURCES: AWOS–3T</span> <span class="afd_font_0">118.425 (352) 528–9949.</span></div>
+              <div class="afd_div_1"><span class="afd_font_3">COMMUNICATIONS: CTAF/UNICOM</span> <span class="afd_font_0">122.8</span></div>
+              <div class="afd_div_1"><span class="afd_font_3"> ®JACKSONVILLE APP/DEP CON</span> <span class="afd_font_0">118.6</span></div>
+              <div class="afd_div_1"><span class="afd_font_3">RADIO AIDS TO NAVIGATION:</span> <span class="afd_tab_1"></span><span class="afd_font_0">NOTAM FILE GNV.</span></div>
+              <div class="afd_div_2"><span class="afd_font_3">GATORS (L) VORTAC</span> <span class="afd_font_0">116.2 <span class="afd_tab_1"></span>GNV <span class="afd_tab_1"></span>Chan 109 <span class="afd_tab_1"></span>N29°41.53′ W82°16.38′ <span class="afd_tab_1"></span>211°
+                22.7 NM to fld. 128/4W.</span> <span class="afd_tab_1"></span><span class="afd_font_3">HIWAS.</span></div>
+              <div class="afd_div_2"><span class="afd_font_0">VORTAC unusable:</span></div>
+              <div class="afd_div_2"><span class="afd_font_0">Byd 25 NM blo 3,000′</span></div>
+            </div>
+
+            <p class="note">
+              See the <a href="http://www.aeronav.faa.gov/afd/05JAN2017/se_166_05JAN2017.pdf">official PDF source</a>.
+            </p>
+-->
+          </div>
+        </div>
+        <div class="col-md-6">
+          <h2>Recent METARs</h2>
+          <div class="row" ng-repeat="metar in metars">
+            <div class="row">
+              <div class="col-md-12" ng-hide="metar.station_id == null">
+                <h2><span>{{ metar.station_id }}</span></h2>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-4 ">
+                <span>Raw:</span>
+              </div>
+              <div class="col-md-8" ng-hide="metar.raw_text == null">
+                <span>{{ metar.raw_text }}</span>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-4 ">
+                <span>Flight Conditions:</span>
+              </div>
+              <div class="col-md-8" ng-hide="metar.sky_condition.flight_category == null">
+                <span>{{ flightConditions(metar) }}</span>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-4 ">
+                <span>Time:</span>
+              </div>
+              <div class="col-md-8" ng-hide="metar.observation_time == null">
+                <span>{{ metar.observation_time }}</span>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-4 ">
+                <span>Winds:</span>
+              </div>
+              <div class="col-md-8" ng-hide="metar.wind_dir_degrees == null">
+                <span>{{ metar.wind_dir_degrees }}&deg; at {{ metar.wind_speed_kt }} kts</span>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-4 ">
+                <span>Visibility:</span>
+              </div>
+              <div class="col-md-8" ng-hide="metar.visibility_statute_mi == null">
+                <span>{{ metar.visibility_statute_mi }} sm</span>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-4 ">
+                <span>Clouds (AGL):</span>
+              </div>
+              <div class="col-md-8" ng-hide="metar.sky_condition.sky_cover == null">
+                <span>{{ metar.sky_condition.sky_cover }} {{ metar.sky_condition.cloud_base_ft_agl }}'</span>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-4 ">
+                <span>Temperature:</span>
+              </div>
+              <div class="col-md-8" ng-hide="metar.temp_c == null">
+                <span>{{ metar.temp_c }}&deg;C {{ convertToF(metar.temp_c) }}&deg;F</span>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-4 ">
+                <span>Dewpoint:</span>
+              </div>
+              <div class="col-md-8" ng-hide="metar.dewpoint_c == null">
+                <span>{{ metar.dewpoint_c }}&deg;C {{ convertToF(metar.dewpoint_c) }}&deg;F</span>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-4 ">
+                <span>Altimeter:</span>
+              </div>
+              <div class="col-md-8" ng-hide="metar.altim_in_hg == null">
+                <span>{{ altim(metar.altim_in_hg) }} in Hg</span>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-4 ">
+                <span>Humidity:</span>
+              </div>
+              <div class="col-md-8" ng-hide="metar.temp_c == null">
+                <span>{{ humidity(metar) }}%</span>
+              </div>
+            </div>
+            <br>
+            <!--
+        <div class="row">
+          <div class="col-md-4 text-right">
+            <span>Density Altitude:</span>
+          </div>
+          <div class="col-md-8" ng-hide="metar.density_altitude == null">
+            <span>{{ metar.density_altitude }}'</span>
+          </div>
+        </div>
+      -->
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
