More mobile friendly, removed uneccessary items

--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -36,11 +36,11 @@ body{
 .button {
   color: #000000;
   text-align: center;
-  font-size: 3em;
+  font-size: 4vw;
   width: 100%;
   transition: all 2s;
   cursor: pointer;
-  margin: 1em;
+  margin: .25em;
 }
 .airbtn {
   overflow-x: auto;
@@ -69,14 +69,39 @@ body{
   opacity: 1;
   left: 140px;
 }
+@media screen and (max-width: 860px) {
+        .button span:after {
+          content:none;
+        }
+        .button span:after {
+          content: '\2192';
+          position: absolute;
+          opacity: 0;
+          top: 0;
+          left: 20px;
+          transition: 0.5s;
+        }
+
+        .button:hover span {
+          padding-right: 20px;
+        }
+
+        .button:hover span:after {
+          opacity: 1;
+          left: 50px;
+        }
+        .buttonM span:after {
+          content: none;
+        }
+}
 .buttonM {
   color: #000000;
   text-align: center;
-  font-size: 3em;
+  font-size: 4vw;
   width: 100%;
   transition: all 2s;
   cursor: pointer;
-  margin: 1em;
+  margin: 0.25em;
 }
 .buttonM span {
   cursor: pointer;
