--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -1,24 +1,6 @@
 <section ng-controller="HomeController">
   <div class="container-fluid">
 	<div class="row">
-    <br>
-    <!--
-    <div ng-repeat="post in posts | orderBy: 'upvotes'">
-      <span ng-click="incrementUpvotes(post)">^</span>
-      <a href="{{post.link}}" ng-show="post.link">
-        {{post.title}}
-      </a>
-      <span ng-hide="post.link">
-      {{post.title}}
-      </span>
-        - upvotes: {{post.upvotes}}
-    </div>
-    <form ng-submit="addPost()">
-      <input type="text" placeholder="Title" ng-model="title"></input>
-      <input type="text" placeholder="Link" ng-model="link"></input>
-  <button type="submit">Post</button>
-</form>
--->
 		<div class="col-md-12">
 			<div class="row">
 				<div class="col-md-4">
@@ -46,7 +28,7 @@
 								LOGBOOK
 							</h3>
 							<p>
-								Log your hours, experience, and memeories. Convieniently downloadable to .xlsx format
+								Log your hours, experience, and memeories.
 							</p>
 						</div>
 					</div>
