add alert box, css change

--- a/modules/fltplan/client/views/fltplan.client.view.html
+++ b/modules/fltplan/client/views/fltplan.client.view.html
@@ -34,11 +34,14 @@
       </div>
     </form>
     <div class="col-xs-12 col-md-3" style="margin-top: 2em">
-      <button class="btn btn-primary pull-right" ng-click="create();find();">
+      <button class="btn btn-primary pull-right" ng-click="create();find();showSuccess();">
           <span>Save to Favorites ✈</span>
         </button>
+
     </div>
+
   </div>
+  <div growl></br></div>
   </div>
   <div class="page-body" ng-show="showBody">
     <div class="row">
