--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -36,9 +36,9 @@
 				</div>
 				<div class="col-md-4">
 					<div class="thumbnail">
-            <button type="button" ui-sref="fltplan" class="btn btn-default">
+            <a href="https://pilot-map-feature.herokuapp.com/" type="button" class="btn btn-default">
               <span class="glyphicon glyphicon-map-marker" style="font-size:5em;" aria-hidden="true"></span>
-            </button>
+            </a>
 						<div class="caption">
 							<h3>
 							  MAPS
